tests/parsing/unterminated_bin_bit_string/stderr.golden
error: unterminated binary bit string, probably missing '"'
bus.fbd +2:25
   |
 2 | 	c config; init-value = b"1100
   | 	                       ^^^^^^
